--- a/38_exerc/index.html
+++ b/38_exerc/index.html
@@ -13,7 +13,15 @@
 
   <section class="container">
     <h1>Lorem ipsum dolor sit amet</h1>
-    <!-- Here -->
+    <div class="paragrafos">
+      <p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p>Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis</p>
+      <p>maxime quos, doloribus vitae voluptatum quisquam necessitatibus</p>
+      <p>pariatur veritatis exercitationem beatae officiis suscipit Ea!</p>
+      </p>
+    </div>
+    
   </section>
 
   <script src="./assets/js/main.js"></script>
